<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sencha.gxt</groupId>
  <artifactId>gxt-demo-explorer</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>Sencha GXT Explorer Examples</name>

  <properties>
    <!-- GXT -->
    <!-- This is dependent on the Sencha Repository credentials and url -->
    <gxt.version>4.0.3-SNAPSHOT</gxt.version>

    <!-- GWT -->
    <gwt.version>2.8.2</gwt.version>
    <gwt.maven.version>2.8.2</gwt.maven.version>
    <gwt.style>OBF</gwt.style>

    <!-- Maven -->
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    
    <!-- App Engine ID -->
    <app.deploy.project>sencha-gxt-demos</app.deploy.project>
    <app.deploy.version>explorer</app.deploy.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    <archiveClasses>true</archiveClasses>
    
    <!-- Global license info to embed into the release, You can change at build time to eval 
       with -Dlicense=eval or gpl with  -Dlicense=gpl -->
    <license>commercial</license>
    <license.fromYear>2006</license.fromYear>
    <license.thruYear>2018</license.thruYear>
    <license.email>licensing@sencha.com</license.email>
    <license.url>http://www.sencha.com/products/gxt/license/</license.url>
  </properties>
  
  <prerequisites>
    <maven>3.5</maven>
  </prerequisites>

  <build>
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/java</directory>
        <!-- Include the xml resources that are loaded in RPC -->
        <includes>
          <include>**/*.xml</include>
          <include>**/*.dtd</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <fork>true</fork>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <!-- Display versions -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>display-dependency-updates</goal>
              <goal>display-plugin-updates</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>
            <exclude>javax.servlet:javax.servlet-api</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- Skips the GWTTestCases during Junit Testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20.1</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*GwtTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- GWT -->
      <!-- 'mvn gwt:run' - runs development mode -->
      <!-- 'mvn gwt:debug' - runs debug mode -->
      <!-- 'mvn gwt:compile' - compiles gwt -->
      <!-- 'mvn gwt:test' or 'mvn integration-test' - runs the gwt tests (*GwtTest.java), (run a suite its faster) -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.maven.version}</version>
        <configuration>
          <strict>true</strict>

          <testTimeOut>180</testTimeOut>
          <includes>**/*GwtTestSuite.java</includes>
          <excludes>**/*GwtTest.java</excludes>
          <mode>htmlunit</mode>

          <extraJvmArgs>-Xss1024K -Xmx1g -XX:MaxPermSize=256M</extraJvmArgs>
          <logLevel>INFO</logLevel>
          <style>${gwt.style}</style>

          <copyWebapp>true</copyWebapp>
          <hostedWebapp>${webappDirectory}</hostedWebapp>

          <runTarget>index.html</runTarget>
          <modules>
            <module>com.sencha.gxt.examples.resources.Resources</module>
            <module>com.sencha.gxt.explorer.Explorer</module>
          </modules>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.openjpa</groupId>
        <artifactId>openjpa-maven-plugin</artifactId>
        <version>2.4.2</version>
        <configuration>
          <includes>**/server/data/*.class</includes>
          <addDefaultConstructor>true</addDefaultConstructor>
          <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
        </configuration>
        <executions>
          <execution>
            <id>enhancer</id>
            <phase>process-classes</phase>
            <goals>
              <goal>enhance</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.apache.openjpa</groupId>
            <artifactId>openjpa</artifactId>
            <!-- set the version to be the same as the level in your runtime -->
            <version>2.4.2</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <!-- Provide a classes jar for source in the dist zip -->
          <attachClasses>true</attachClasses>
          <webResources>
            <resource>
              <filtering>true</filtering>
              <directory>src/main/webapp</directory>
              <includes>
                <include>**/*.html</include>
              </includes>
            </resource>
          </webResources>
          <packagingExcludes>WEB-INF/deploy/**</packagingExcludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <!-- App Engine Hosting -->
      <!-- https://cloud.google.com/appengine/docs/standard/java/tools/using-maven -->
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>appengine-maven-plugin</artifactId>
        <version>1.3.2</version>
        <configuration>
          <devserver.host>0.0.0.0</devserver.host>
          <devserver.port>8181</devserver.port>
        </configuration>
      </plugin>
      
      <!-- License Addition -->
      <plugin>
        <groupId>com.google.code.maven-license-plugin</groupId>
        <artifactId>maven-license-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <mapping>
            <theme>JAVADOC_STYLE</theme>
          </mapping>
          <includes>
            <include>**/*.java</include>
            <include>**/*.theme</include>
            <include>**/*.gwt.xml</include>
            <include>**/*.ui.xml</include>
          </includes>
          <excludes>
            <exclude>**/super/**</exclude>
          </excludes>
          <header>${project.basedir}/src/main/resources/license/license_${license}.txt</header>
          <properties>
            <project.version>${project.version}</project.version>
            <license>${license}</license>
            <license.fromYear>${license.fromYear}</license.fromYear>
            <license.thruYear>${license.thruYear}</license.thruYear>
            <license.email>${license.email}</license.email>
            <license.url>${license.url}</license.url>
          </properties>
          <quiet>true</quiet>
        </configuration>
        <executions>
          <execution>
            <id>apply-license</id>
            <phase>process-sources</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build 
          itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.openjpa</groupId>
                    <artifactId>openjpa-maven-plugin</artifactId>
                    <versionRange>[2.4.2,)</versionRange>
                    <goals>
                      <goal>enhance</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute>
                      <runOnIncremental>true</runOnIncremental>
                    </execute>
                  </action>
                </pluginExecution>

                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <versionRange>[1.0.0,)</versionRange>
                    <goals>
                      <goal>enforce</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>com.google.code.maven-license-plugin</groupId>
                    <artifactId>maven-license-plugin</artifactId>
                    <versionRange>[1.4.0,)</versionRange>
                    <goals>
                      <goal>format</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.mortbay.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>8.1.16.v20140903</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>fast-build</id>
      <properties>
        <profile.fast.build>
          &lt;set-property name="user.agent" value="safari" /&gt;
          &lt;set-property name="gxt.user.agent" value="chrome" /&gt;
          &lt;set-property name="gxt.device" value="desktop" /&gt;
          &lt;set-property name="gxt.theme" value="triton" /&gt; 
        </profile.fast.build>
      </properties>
      <build>
        <resources>
          <resource>
            <directory>src/main/java</directory>
            <filtering>true</filtering>
            <includes>
              <include>**/*.gwt.xml</include>
            </includes>
          </resource>
        </resources>

        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.0.2</version>
            <configuration>
              <encoding>UTF-8</encoding>
              <delimiters>&lt;!--{*}--&gt;</delimiters>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <!-- http://docs.sencha.com/gxt/latest/getting_started/maven/Maven.html -->
      <!-- ~/.m2/settings.xml add <server/> with the support portal credentials -->
      <id>sencha-gxt-repository</id>
      <name>Sencha GXT Repository</name>
      <!-- <url>https://maven.sencha.com/repo/gxt-support-commercial-release</url> -->
      <url>https://maven.sencha.com/repo/gxt-commercial-snapshot</url>
    </repository>
    <repository>
      <id>snapshots-repo</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <!-- GWT (BOM or Bill of Materials) -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt</artifactId>
        <version>${gwt.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- GWT -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <scope>provided</scope>
      <exclusions>
        <!-- Fixes xerces class cast exception, during the enhance excecution -->
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.gwt.inject</groupId>
      <artifactId>gin</artifactId>
      <version>2.1.2</version>
    </dependency>

    <!-- GXT -->
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt</artifactId>
      <version>${gxt.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-chart</artifactId>
      <version>${gxt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-theme-neptune</artifactId>
      <version>${gxt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sencha.gxt</groupId>
      <artifactId>gxt-theme-triton</artifactId>
      <version>${gxt.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.4.0</version>
    </dependency>

    <!-- Support for our JPA persistence -->
    <dependency>
      <groupId>org.apache.openjpa</groupId>
      <artifactId>openjpa-all</artifactId>
      <version>2.4.2</version>
    </dependency>

    <!-- RF annotation processing -->
    <dependency>
      <groupId>com.google.web.bindery</groupId>
      <artifactId>requestfactory-apt</artifactId>
      <scope>provided</scope>
    </dependency>
    <!-- RF needs a JSON jar at runtime -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20171018</version>
      <scope>compile</scope>
    </dependency>

    <!-- javax.validation for RF bean validation -->
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <scope>compile</scope>
    </dependency>
    <!-- Simple javax.validation impl -->
    <dependency>
      <groupId>org.apache.bval</groupId>
      <artifactId>bval-jsr303</artifactId>
      <version>0.5</version>
      <scope>runtime</scope>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.senchalabs.gwt</groupId>
      <artifactId>gxt-driver</artifactId>
      <version>0.0.1-SNAPSHOT</version>
      <exclusions>
        <exclusion>
          <groupId>com.sencha.gxt</groupId>
          <artifactId>gxt</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.sencha.gxt</groupId>
          <artifactId>gxt-chart</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

</project>
